policies/gatekeeper/constraints/framework-label-rule.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-ns-label
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "The label `framework` is required."
    labels:
      - key: framework
        allowedRegex: ".+"
